--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,11 @@ main{
     width: var(--atomSize);
     height: var(--atomSize);
     display: block;
+     position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 .c-atom__nucleus, .c-atom__orbit, .c-atom__electron, .c-atom__orbitTrain, .c-atom__electronTrain {
     position: absolute;
